--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
                   alt=""
                 />
               </div>
-              <div class="product-name text-gray-700 font-bold mt-2 text-sm">
+              <div class="product-name w-48 text-gray-700 font-bold mt-2 text-sm">
                 Nintendo Switch with Neon Blue and Neon Red Joy‑Con -
                 HAC-001(-01)
               </div>
@@ -674,7 +674,7 @@
                   alt=""
                 />
               </div>
-              <div class="product-name text-gray-700 font-bold mt-2 text-sm">
+              <div class="product-name w-48 text-gray-700 font-bold mt-2 text-sm">
                 2020 Apple MacBook Pro with Apple M1 Chip (13-inch, 8GB RAM,
                 256GB SSD Storage) - Space Gray
               </div>
@@ -696,7 +696,7 @@
                   alt=""
                 />
               </div>
-              <div class="product-name text-gray-700 font-bold mt-2 text-sm">
+              <div class="product-name w-48 text-gray-700 font-bold mt-2 text-sm">
                 New Apple iPhone 12 Pro Max (512GB, Pacific Blue) [Locked] +
                 Carrier Subscription
               </div>
@@ -710,7 +710,7 @@
             </div>
 
             <!-- product 4 -->
-            <div class="main-product m-2">
+            <div class="main-product m-2 inline-block">
               <div class="product-image w-48 h-52 bg-white rounded-lg">
                 <img
                   class="w-full h-full object-contain p-4"
@@ -718,7 +718,7 @@
                   alt=""
                 />
               </div>
-              <div class="product-name text-gray-700 font-bold mt-2 text-sm">
+              <div class="product-name w-48 text-gray-700 font-bold mt-2 text-sm">
                 Alienware Area 51M Gaming Laptop, 17.3" 300hz 3ms FHD Display,
                 Intel Core i7-10700K, Nvidia GeForce RTX 2070 Super 8GB GDDR6,
                 1TB SSD, 16GB RAM, Lunar Light (AWARR2-7323WHT-PUS)
