--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
   <body>
     <!-- header -->
     <div class="bg-white w-full">
-      <div class="header h-16 bg-gray-900 flex items-center">
-        <div class="logo w-1/5 h-16 ml-10 pt-3">
+      <div class="header h-16 bg-black flex items-center">
+        <div class="logo w-1/5 h-16 ml-10 mb-1 pt-3">
           <img
             class="w-28 h-16 object-contain"
             src="https://www.pinclipart.com/picdir/big/57-576184_view-our-amazon-storefront-amazon-logo-white-png.png"
@@ -42,7 +42,7 @@
             h-9
             w-30
             bg-gray-800
-            border border-gray-500 border-opacity-75
+            border border-blue-700 border-opacity-75
             rounded-l-xl
             px-3
             text-white
@@ -60,7 +60,7 @@
             h-9
             w-30
             bg-gray-800
-            border border-gray-500 border-opacity-75
+            border border-blue-700 border-opacity-75
             px-3
             text-white
             flex
@@ -90,7 +90,7 @@
             search-icon
             h-9
             w-10
-            bg-yellow-500
+            bg-blue-500
             rounded-r-xl
             flex
             justify-center
@@ -119,7 +119,7 @@
         <div
           class="
             icons
-            text-white
+            text-blue-500
             flex
             items-center
             ml-auto
@@ -131,7 +131,7 @@
         >
           <!-- heart svg icon -->
           <svg
-            class="h-4 w-4"
+            class="h-5 w-5"
             xmlns="http://www.w3.org/2000/svg"
             fill="none"
             viewBox="0 0 24 24"
@@ -151,7 +151,7 @@
               cart-icon
               h-10
               w-10
-              bg-yellow-500
+              bg-blue-500
               flex
               items-center
               justify-center
@@ -160,7 +160,7 @@
           >
             <!-- cart svg icon -->
             <svg
-              class="h-4 w-4 text-gray-600"
+              class="h-5 w-5 text-blue-300"
               xmlns="http://www.w3.org/2000/svg"
               fill="none"
               viewBox="0 0 24 24"
@@ -177,7 +177,7 @@
           <!-- bell svg icon -->
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            class="h-4 w-4"
+            class="h-5 w-5"
             fill="none"
             viewBox="0 0 24 24"
             stroke="currentColor"
@@ -199,20 +199,21 @@
     <div class="main h-screen flex">
       <!-- Sidebar -->
       <div
-        class="main-sidebar border-t-2 border-gray-700 w-1/5 bg-gray-900 p-6"
+        class="main-sidebar border-t-2 border-blue-700 w-1/5 bg-black p-6"
       >
         <!-- categories -->
         <div class="sidebar-categories">
           <div
             class="
               sidebar-main-category
-              text-yellow-500
+              text-blue-500
               cursor-pointer
               flex
               font-bold
               mb-4
               p-2
-              bg-gray-700
+              bg-blue-500
+              bg-opacity-50
               rounded-lg
             "
           >
@@ -239,7 +240,7 @@
           <div
             class="
               sidebar-main-category
-              text-white
+              text-blue-700
               cursor-pointer
               flex
               font-bold
@@ -252,7 +253,7 @@
           <div
             class="
               sidebar-main-category
-              text-white
+              text-blue-700
               cursor-pointer
               flex
               font-bold
@@ -265,7 +266,7 @@
           <div
             class="
               sidebar-main-category
-              text-white
+              text-blue-700
               cursor-pointer
               flex
               font-bold
@@ -278,7 +279,7 @@
           <div
             class="
               sidebar-main-category
-              text-white
+              text-blue-700
               cursor-pointer
               flex
               font-bold
@@ -291,7 +292,7 @@
           <div
             class="
               sidebar-main-category
-              text-white
+              text-blue-700
               cursor-pointer
               flex
               font-bold
@@ -304,7 +305,7 @@
           <div
             class="
               sidebar-main-category
-              text-white
+              text-blue-700
               cursor-pointer
               flex
               font-bold
@@ -317,7 +318,7 @@
           <div
             class="
               sidebar-main-category
-              text-white
+              text-blue-700
               cursor-pointer
               flex
               font-bold
@@ -334,7 +335,7 @@
           <div
             class="
               sidebar-main-category
-              text-white
+              text-blue-700
               cursor-pointer
               flex
               font-bold
@@ -351,7 +352,7 @@
         </div>
       </div>
       <!-- main section -->
-      <div class="main-section flex-1 p-6 bg-gray-100">
+      <div class="main-section flex-1 p-6 bg-gray-400">
         <!-- banner -->
         <div class="main-section-banner h-44 rounded-lg flex items-end">
           <div
@@ -406,7 +407,7 @@
                 icon-desktop
                 h-20
                 w-20
-                bg-white
+                bg-blue-300
                 rounded-xl
                 flex
                 justify-center
@@ -414,7 +415,7 @@
               "
             >
               <svg
-                class="h-12 w-12 text-gray-500"
+                class="h-12 w-12 text-blue-700"
                 xmlns="http://www.w3.org/2000/svg"
                 fill="none"
                 viewBox="0 0 24 24"
@@ -434,7 +435,7 @@
                 icon-gift
                 h-20
                 w-20
-                bg-white
+                bg-blue-300
                 rounded-xl
                 flex
                 justify-center
@@ -443,7 +444,7 @@
               "
             >
               <svg
-                class="h-12 w-12 text-gray-500"
+                class="h-12 w-12 text-blue-700"
                 xmlns="http://www.w3.org/2000/svg"
                 fill="none"
                 viewBox="0 0 24 24"
@@ -463,7 +464,7 @@
                 icon-mobile
                 h-20
                 w-20
-                bg-white
+                bg-blue-300
                 rounded-xl
                 flex
                 justify-center
@@ -472,7 +473,7 @@
               "
             >
               <svg
-                class="h-12 w-12 text-gray-500"
+                class="h-12 w-12 text-blue-700"
                 xmlns="http://www.w3.org/2000/svg"
                 fill="none"
                 viewBox="0 0 24 24"
@@ -492,7 +493,7 @@
                 icon-book
                 h-20
                 w-20
-                bg-white
+                bg-blue-300
                 rounded-xl
                 flex
                 justify-center
@@ -501,7 +502,7 @@
               "
             >
               <svg
-                class="h-12 w-12 text-gray-500"
+                class="h-12 w-12 text-blue-700"
                 xmlns="http://www.w3.org/2000/svg"
                 fill="none"
                 viewBox="0 0 24 24"
@@ -521,7 +522,7 @@
                 icon-camera
                 h-20
                 w-20
-                bg-white
+                bg-blue-300
                 rounded-xl
                 flex
                 justify-center
@@ -530,7 +531,7 @@
               "
             >
               <svg
-                class="h-12 w-12 text-gray-500"
+                class="h-12 w-12 text-blue-700"
                 xmlns="http://www.w3.org/2000/svg"
                 fill="none"
                 viewBox="0 0 24 24"
@@ -556,7 +557,7 @@
                 icon-house
                 h-20
                 w-20
-                bg-white
+                bg-blue-300
                 rounded-xl
                 flex
                 justify-center
@@ -565,7 +566,7 @@
               "
             >
               <svg
-                class="h-12 w-12 text-gray-500"
+                class="h-12 w-12 text-blue-700"
                 xmlns="http://www.w3.org/2000/svg"
                 fill="none"
                 viewBox="0 0 24 24"
@@ -585,7 +586,7 @@
                 icon-music
                 h-20
                 w-20
-                bg-white
+                bg-blue-300
                 rounded-xl
                 flex
                 justify-center
@@ -594,7 +595,7 @@
               "
             >
               <svg
-                class="h-12 w-12 text-gray-500"
+                class="h-12 w-12 text-blue-700"
                 xmlns="http://www.w3.org/2000/svg"
                 fill="none"
                 viewBox="0 0 24 24"
@@ -614,7 +615,7 @@
                 icon-lightbulb
                 h-20
                 w-20
-                bg-white
+                bg-blue-300
                 rounded-xl
                 flex
                 justify-center
@@ -623,7 +624,7 @@
               "
             >
               <svg
-                class="h-12 w-12 text-gray-500"
+                class="h-12 w-12 text-blue-700"
                 xmlns="http://www.w3.org/2000/svg"
                 fill="none"
                 viewBox="0 0 24 24"
@@ -652,15 +653,15 @@
                   alt=""
                 />
               </div>
-              <div class="product-name w-48 text-gray-700 font-bold mt-2 text-sm">
+              <div class="product-name w-48 text-blue-700 font-bold mt-2 text-sm">
                 Nintendo Switch with Neon Blue and Neon Red Joy‑Con -
                 HAC-001(-01)
               </div>
-              <div class="product-make text-green-700 font-bold">Nintendo</div>
+              <div class="product-make text-blue-300 font-bold">Nintendo</div>
               <div class="product-rating text-yellow-300 font-bold my-1">
                 ⭐⭐⭐⭐⭐ 4.5
               </div>
-              <div class="product-price font-bold text-gray-700 text-lg">
+              <div class="product-price font-bold text-blue-700 text-lg">
                 $299.00
               </div>
             </div>
@@ -674,15 +675,15 @@
                   alt=""
                 />
               </div>
-              <div class="product-name w-48 text-gray-700 font-bold mt-2 text-sm">
+              <div class="product-name w-48 text-blue-700 font-bold mt-2 text-sm">
                 2020 Apple MacBook Pro with Apple M1 Chip (13-inch, 8GB RAM,
                 256GB SSD Storage) - Space Gray
               </div>
-              <div class="product-make text-green-700 font-bold">Apple</div>
+              <div class="product-make text-blue-300 font-bold">Apple</div>
               <div class="product-rating text-yellow-300 font-bold my-1">
                 ⭐⭐⭐⭐⭐ 5
               </div>
-              <div class="product-price font-bold text-gray-700 text-lg">
+              <div class="product-price font-bold text-blue-700 text-lg">
                 $1,099.99
               </div>
             </div>
@@ -696,15 +697,15 @@
                   alt=""
                 />
               </div>
-              <div class="product-name w-48 text-gray-700 font-bold mt-2 text-sm">
+              <div class="product-name w-48 text-blue-700 font-bold mt-2 text-sm">
                 New Apple iPhone 12 Pro Max (512GB, Pacific Blue) [Locked] +
                 Carrier Subscription
               </div>
-              <div class="product-make text-green-700 font-bold">Apple</div>
+              <div class="product-make text-blue-300 font-bold">Apple</div>
               <div class="product-rating text-yellow-300 font-bold my-1">
                 ⭐⭐⭐⭐⭐ 5
               </div>
-              <div class="product-price font-bold text-gray-700 text-lg">
+              <div class="product-price font-bold text-blue-700 text-lg">
                 $1,399.00
               </div>
             </div>
@@ -718,16 +719,16 @@
                   alt=""
                 />
               </div>
-              <div class="product-name w-48 text-gray-700 font-bold mt-2 text-sm">
+              <div class="product-name w-48 text-blue-700 font-bold mt-2 text-sm">
                 Alienware Area 51M Gaming Laptop, 17.3" 300hz 3ms FHD Display,
                 Intel Core i7-10700K, Nvidia GeForce RTX 2070 Super 8GB GDDR6,
                 1TB SSD, 16GB RAM, Lunar Light (AWARR2-7323WHT-PUS)
               </div>
-              <div class="product-make text-green-700 font-bold">Alienware</div>
+              <div class="product-make text-blue-300 font-bold">Alienware</div>
               <div class="product-rating text-yellow-300 font-bold my-1">
                 ⭐⭐⭐⭐⭐ 4.5
               </div>
-              <div class="product-price font-bold text-gray-700 text-lg">
+              <div class="product-price font-bold text-blue-700 text-lg">
                 $2,600.00
               </div>
             </div>
