--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
         <!-- Section Deals -->
         <div class="main-section-deals mt-5">
           <h1 class="text-2xl font-bold text-gray-700 mb-5">Hot Deals 🔥</h1>
-          <div class="main-section-product flex">
+          <div class="main-section-product flex flex-wrap">
             <!-- Product 1 -->
             <div class="main-product m-2">
               <div class="product-image w-48 h-52 bg-white rounded-lg">
@@ -732,6 +732,28 @@
                 $2,600.00
               </div>
             </div>
+
+                    <!-- product 5 -->
+                    <div class="main-product m-2">
+                      <div class="product-image w-48 h-52 bg-white rounded-lg">
+                        <img
+                          class="w-full h-full object-contain p-4"
+                          src="https://m.media-amazon.com/images/I/712derGmH8L._UY560_.jpg"
+                          alt=""
+                        />
+                      </div>
+                      <div class="product-name w-48 text-blue-700 font-bold mt-2 text-sm">
+                        2020 Tesla S Long Range Plus
+                      </div>
+                      <div class="product-make text-blue-300 font-bold">Tesla</div>
+                      <div class="product-rating text-yellow-300 font-bold my-1">
+                        ⭐⭐⭐⭐⭐ 4.5
+                      </div>
+                      <div class="product-price font-bold text-blue-700 text-lg">
+                        $70,620.00
+                      </div>
+                    </div>
+
           </div>
         </div>
       </div>
