--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
       <div class="main"></div>
     </div>
 
-    <div class="main h-screen flex">
+    <div class="main h-auto flex">
       <!-- Sidebar -->
       <div
         class="main-sidebar border-t-2 border-blue-700 w-1/5 bg-black p-6"
