--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
               cursor-pointer
             "
           >
-            <h4 class="text-bold text-yellow-500">Browse Products</h4>
+            <h4 class="font-bold text-blue-700">Browse Products</h4>
           </div>
         </div>
 
