--- a/cart.html
+++ b/cart.html
@@ -24,6 +24,8 @@
       integrity="sha384-VngWWnG9GS4jDgsGEUNaoRQtfBGiIKZTiXwm9KpgAeaRn6Y/1tAFiyXqSzqC8Ga/"
       crossorigin="anonymous"
     ></script>
+
+    <script src="./header.js"></script>
   </head>
   <body>
     <!-- header -->
@@ -42,7 +44,7 @@
         <input
           class="
             h-9
-            w-30
+            w-2/5
             bg-gray-800
             border border-blue-700 border-opacity-75
             rounded-l-xl
@@ -133,7 +135,7 @@
         >
           <!-- heart svg icon -->
           <svg
-            class="h-5 w-5"
+            class="h-5 w-5 cursor-pointer duration-500 transform hover:scale-125"
             xmlns="http://www.w3.org/2000/svg"
             fill="none"
             viewBox="0 0 24 24"
@@ -148,38 +150,66 @@
           </svg>
 
           <!-- cart icon -->
-          <div
-            class="
-              cart-icon
-              h-10
-              w-10
-              bg-blue-500
-              flex
-              items-center
-              justify-center
-              rounded-xl
-            "
-          >
-            <!-- cart svg icon -->
-            <svg
-              class="h-5 w-5 text-blue-300"
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke="currentColor"
+
+          <a href="/cart.html">
+            <div
+              class="
+                cart-icon
+                h-10
+                w-10
+                bg-blue-500
+                flex
+                items-center
+                justify-center
+                rounded-xl
+                relative
+                hover:bg-blue-600
+                duration-500
+                transform
+                hover:scale-105
+              "
             >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"
-              />
-            </svg>
-          </div>
+              <!-- Total Items in cart -->
+              <div
+                class="
+                  cart-item-number
+                  absolute
+                  -top-1
+                  -right-1
+                  h-4
+                  w-4
+                  bg-white
+                  rounded-full
+                  flex
+                  justify-center
+                  items-center
+                  text-gray-800 text-xs
+                "
+              >
+                1
+              </div>
+              <!-- cart svg icon -->
+              <svg
+                class="h-5 w-5 text-blue-300"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"
+                />
+              </svg>
+            </div>
+          </a>
+
           <!-- bell svg icon -->
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            class="h-5 w-5"
+            class="h-5 w-5 cursor-pointer duration-500 transform hover:scale-125"
             fill="none"
             viewBox="0 0 24 24"
             stroke="currentColor"
@@ -192,28 +222,44 @@
             />
           </svg>
           <!-- Jdenticon icon -->
-          <svg class="h-12 w-12 rounded" data-jdenticon-value="jessy"></svg>
+          <svg
+            class="h-12 w-12 rounded duration-500 transform hover:scale-105"
+            data-jdenticon-value="jessy"
+          ></svg>
         </div>
       </div>
-      <div class="main"></div>
     </div>
 
-    <div class="main h-auto flex">
+    <div class="main h-screen flex border-t-2 border-blue-700">
       <!-- Sidebar -->
-      <div class="main-sidebar border-t-2 border-blue-700 w-1/5 bg-black p-6">
+      <div
+        class="
+          main-sidebar
+          hidden
+          md:block
+          border-r-2 border-blue-700
+          w-1/5
+          bg-black
+          p-6
+        "
+      >
         <!-- categories -->
         <div class="sidebar-categories">
+          <!-- Categories -->
           <div
             class="
               sidebar-main-category
-              text-blue-500
+              text-blue-300
               cursor-pointer
               flex
               font-bold
               mb-4
               p-2
-              bg-blue-500 bg-opacity-50
+              bg-blue-500 bg-opacity-40
               rounded-lg
+              duration-500
+              transform
+              hover:scale-105
             "
           >
             <!-- grid svg icon -->
@@ -236,94 +282,128 @@
             <span>Categories</span>
           </div>
 
+          <!-- Echo and Alexa -->
           <div
             class="
               sidebar-main-category
-              text-blue-700
+              text-blue-500
               cursor-pointer
               flex
               font-bold
               p-2
+              duration-500
+              transform
+              hover:scale-105
             "
           >
             <span class="w-8"></span>
-            <span>Echo and Alex</span>
+            <span>Echo and Alexa</span>
           </div>
+
+          <!-- Kindle -->
           <div
             class="
               sidebar-main-category
-              text-blue-700
+              text-blue-500
               cursor-pointer
               flex
               font-bold
               p-2
+              duration-500
+              transform
+              hover:scale-105
             "
           >
             <span class="w-8"></span>
             <span>Kindle</span>
           </div>
+
+          <!-- Books -->
           <div
             class="
               sidebar-main-category
-              text-blue-700
+              text-blue-500
               cursor-pointer
               flex
               font-bold
               p-2
+              duration-500
+              transform
+              hover:scale-105
             "
           >
             <span class="w-8"></span>
             <span>Books</span>
           </div>
+
+          <!-- Electronics -->
           <div
             class="
               sidebar-main-category
-              text-blue-700
+              text-blue-500
               cursor-pointer
               flex
               font-bold
               p-2
+              duration-500
+              transform
+              hover:scale-105
             "
           >
             <span class="w-8"></span>
             <span>Electronics</span>
           </div>
+
+          <!-- Home and Garden -->
           <div
             class="
               sidebar-main-category
-              text-blue-700
+              text-blue-500
               cursor-pointer
               flex
               font-bold
               p-2
+              duration-500
+              transform
+              hover:scale-105
             "
           >
             <span class="w-8"></span>
-            <span>Home and Garden</span>
+            <span>Home & Garden</span>
           </div>
+
+          <!-- Fashion -->
           <div
             class="
               sidebar-main-category
-              text-blue-700
+              text-blue-500
               cursor-pointer
               flex
               font-bold
               p-2
+              duration-500
+              transform
+              hover:scale-105
             "
           >
             <span class="w-8"></span>
             <span>Fashion</span>
           </div>
+
+          <!-- Sell on Amazon -->
           <div
             class="
               sidebar-main-category
-              text-blue-700
+              text-blue-500
               cursor-pointer
               flex
               font-bold
               p-2
               hover:bg-gray-700
               rounded-xl
+              duration-500
+              transform
+              hover:scale-105
             "
           >
             <span class="w-8">
@@ -331,16 +411,21 @@
             </span>
             <span>Sell on Amazon</span>
           </div>
+
+          <!-- Help -->
           <div
             class="
               sidebar-main-category
-              text-blue-700
+              text-blue-500
               cursor-pointer
               flex
               font-bold
               p-2
               hover:bg-gray-700
               rounded-xl
+              duration-500
+              transform
+              hover:scale-105
             "
           >
             <span class="w-8">
@@ -352,32 +437,26 @@
       </div>
 
       <!-- main section -->
-      <div class="main-section flex-1 p-6 bg-white h-full">
+      <div class="main-section flex-1 p-6 bg-gray-900">
         <!-- banner -->
-        <h1 class="font-bold text-gray-400 text-3xl">Shopping Cart</h1>
+        <h1 class="font-bold text-gray-400 text-3xl mb-6">Shopping Cart</h1>
         <div class="table-tiles flex font-bold text-gray-400">
           <!-- Headers -->
           <h2 class="flex-grow">Product</h2>
           <h2 class="w-48">Count</h2>
+
           <h2 class="w-48">Total Cost</h2>
           <span class="w-10"></span>
         </div>
 
-  <!-- ***** cart item -->
-  <!-- <div
-  class="cart-item flex items-center pb-4 border-b border-gray-100"
->
-    </div> -->
-
-
         <!-- ***** cart items -->
         <div class="cart-items mt-5">
-          <!-- ***** cart item -->
+          <!-- ***** cart item 1 -->
           <div
-            class="cart-item flex items-center pb-4 border-b border-gray-100"
+            class="cart-item border-b border-gray-100 flex items-center pb-4"
           >
             <!-- image -->
-            <div class="cart-item-image w-40 h-24 bg-white p-4 rounded-lg">
+            <div class="cart-item-image mr-4 w-40 h-24 bg-white p-4 rounded-lg">
               <img
                 class="w-full h-full object-contain"
                 src="https://m.media-amazon.com/images/I/71an9eiBxpL._AC_SL1500_.jpg"
@@ -385,30 +464,15 @@
               />
             </div>
 
-
-            
             <!-- ***** Product details -->
-            <div class="cart-item-details flex items-center pb-4">
-              <!-- Product -->
-              <div
-                class="
-                  cart-item-details
-                  font-bold
-                  text-sm text-gray-600
-                  flex-grow
-                "
-              >
-                <!-- Product title -->
-                <div class="cart-item-title text-sm text-gray-400">
-                  Apple MacBook Pro 13,3
-                </div>
-
-                <!-- Product Brand -->
-                <div class="cart-item-brand">
-                    Apple
-
-                </div>
+            <div class="cart-item-details flex-grow">
+              <!-- Product title -->
+              <div class="cart-item-title font-bold text-sm text-gray-600">
+                Apple MacBook Pro 13,3
               </div>
+
+              <!-- Product Brand -->
+              <div class="cart-item-brand text-sm text-gray-400">Apple</div>
             </div>
 
             <!-- ***** cart item counter -->
@@ -417,7 +481,6 @@
               <div
                 class="
                   chevron-left
-                  cursor-pointer
                   text-gray-400
                   bg-gray-100
                   rounded
@@ -428,6 +491,7 @@
                   items-center
                   hover:bg-gray-200
                   mr-2
+                  cursor-pointer
                 "
               >
                 <i class="fas fa-chevron-left fa-xs"></i>
@@ -440,7 +504,6 @@
               <div
                 class="
                   chevron-right
-                  cursor-pointer
                   text-gray-400
                   bg-gray-100
                   rounded
@@ -451,6 +514,7 @@
                   items-center
                   hover:bg-gray-200
                   ml-2
+                  cursor-pointer
                 "
               >
                 <i class="fas fa-chevron-right fa-xs"></i>
@@ -458,8 +522,8 @@
             </div>
 
             <!-- ***** item total cost -->
-            <div class="cart-item-total-cost w-488 font-bold text-gray-400">
-              $1.490.00
+            <div class="cart-item-total-cost w-48 font-bold text-gray-400">
+              $1,490.00
             </div>
 
             <!-- ***** delete button -->
@@ -471,38 +535,133 @@
                 text-gray-300
                 cursor-pointer
                 hover:text-gray-400
+                duration-500
+                transform
+                hover:scale-125              
               "
             >
               <i class="fas fa-times"></i>
             </div>
-         
-        </div>
+          </div>
 
-        <!-- Complete Order -->
-        <div class="complete-order flex justify-end mt-10">
-          <!-- price -->
-          <div class="total-cost mr-7">
-            <h2 class="text-gray-400">Total Cost</h2>
-            <div class="total-cost-number text-3xl font-bold text-gray-600">
-              $1.780.00
+          <!-- ***** cart item 2 -->
+          <div
+            class="cart-item border-b border-gray-100 flex items-center pb-4"
+          >
+            <!-- image -->
+            <div class="cart-item-image mr-2 mt-2 w-40 h-24 bg-white p-4 rounded-lg">
+              <img
+                class="w-full h-full object-contain"
+                src="https://m.media-amazon.com/images/I/61-PblYntsL._AC_SL1500_.jpg"
+              />
+            </div>
+
+            <!-- ***** Product details -->
+            <div class="cart-item-details flex-grow">
+              <!-- Product title -->
+              <div class="cart-item-title mt-2 font-bold text-sm text-gray-600">
+                Nintendo Switch
+              </div>
+
+              <!-- Product Brand -->
+              <div class="cart-item-brand text-sm text-gray-400">Nintendo</div>
+            </div>
+
+            <!-- ***** cart item counter -->
+            <div class="cart-item-counter w-48 flex items-center">
+              <!-- Chevron Icon Left -->
+              <div
+                class="
+                  chevron-left
+                  text-gray-400
+                  bg-gray-100
+                  rounded
+                  h-6
+                  w-6
+                  flex
+                  justify-center
+                  items-center
+                  hover:bg-gray-200
+                  mr-2
+                  cursor-pointer
+                "
+              >
+                <i class="fas fa-chevron-left fa-xs"></i>
+              </div>
+
+              <!-- Amount -->
+              <h4 class="text-gray-400">x1</h4>
+
+              <!-- Chevron Icon Right -->
+              <div
+                class="
+                  chevron-right
+                  text-gray-400
+                  bg-gray-100
+                  rounded
+                  h-6
+                  w-6
+                  flex
+                  justify-center
+                  items-center
+                  hover:bg-gray-200
+                  ml-2
+                  cursor-pointer
+                "
+              >
+                <i class="fas fa-chevron-right fa-xs"></i>
+              </div>
+            </div>
+
+            <!-- ***** item total cost -->
+            <div class="cart-item-total-cost w-48 font-bold text-gray-400">
+              $299.00
+            </div>
+
+            <!-- ***** delete button -->
+            <div
+              class="
+                cart-item-delete
+                w-10
+                font-bold
+                text-gray-300
+                cursor-pointer
+                duration-500
+                transform
+                hover:scale-125
+                hover:text-gray-400
+              "
+            >
+              <i class="fas fa-times"></i>
             </div>
           </div>
-          <!-- button -->
-          <div
-            class="
-              complete-order-button
-              w-56
-              flex
-              items-center
-              justify-center
-              bg-yellow-500
-              rounded
-              text-white
-              cursor-pointer
-              hover:bg-yellow-600
-            "
-          >
-            Complete Order
+
+          <!-- Complete Order -->
+          <div class="complete-order flex justify-end mt-10">
+            <!-- price -->
+            <div class="total-cost mr-7">
+              <h2 class="text-gray-400">Total Cost</h2>
+              <div class="total-cost-number text-3xl font-bold text-gray-600">
+                $1,789.00
+              </div>
+            </div>
+            <!-- button -->
+            <div
+              class="
+                complete-order-button
+                w-56
+                flex
+                items-center
+                justify-center
+                bg-yellow-500
+                rounded
+                text-white
+                cursor-pointer
+                hover:bg-yellow-600
+              "
+            >
+              Complete Order
+            </div>
           </div>
         </div>
       </div>
