--- a/index.html
+++ b/index.html
@@ -24,6 +24,19 @@
       integrity="sha384-VngWWnG9GS4jDgsGEUNaoRQtfBGiIKZTiXwm9KpgAeaRn6Y/1tAFiyXqSzqC8Ga/"
       crossorigin="anonymous"
     ></script>
+
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-analytics.js"></script>
+
+    <script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-firestore.js"></script>
+
+    <script src="./script.js"></script>
+    <script src="./firebase.js"></script>
+    <script src="./header.js"></script>
   </head>
   <body>
     <!-- header -->
@@ -133,7 +146,7 @@
         >
           <!-- heart svg icon -->
           <svg
-            class="h-5 w-5"
+            class="h-5 w-5 cursor-pointer duration-500 transform hover:scale-125"
             xmlns="http://www.w3.org/2000/svg"
             fill="none"
             viewBox="0 0 24 24"
@@ -161,6 +174,10 @@
                 justify-center
                 rounded-xl
                 relative
+                hover:bg-blue-600
+                duration-500
+                transform
+                hover:scale-105
               "
             >
               <!-- Total Items in cart -->
@@ -203,7 +220,7 @@
           <!-- bell svg icon -->
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            class="h-5 w-5"
+            class="h-5 w-5 cursor-pointer duration-500 transform hover:scale-125"
             fill="none"
             viewBox="0 0 24 24"
             stroke="currentColor"
@@ -216,17 +233,30 @@
             />
           </svg>
           <!-- Jdenticon icon -->
-          <svg class="h-12 w-12 rounded" data-jdenticon-value="jessy"></svg>
+          <svg
+            class="h-12 w-12 rounded duration-500 transform hover:scale-105"
+            data-jdenticon-value="jessy"
+          ></svg>
         </div>
       </div>
-      <div class="main"></div>
     </div>
 
-    <div class="main h-auto flex">
+    <div class="main h-screen flex border-t-2 border-blue-700">
       <!-- Sidebar -->
-      <div class="main-sidebar border-t-2 border-blue-700 w-1/5 bg-black p-6">
+      <div
+        class="
+          main-sidebar
+          hidden
+          md:block
+          border-r-2 border-blue-700
+          w-1/5
+          bg-black
+          p-6
+        "
+      >
         <!-- categories -->
         <div class="sidebar-categories">
+          <!-- Categories -->
           <div
             class="
               sidebar-main-category
@@ -238,6 +268,9 @@
               p-2
               bg-blue-500 bg-opacity-40
               rounded-lg
+              duration-500
+              transform
+              hover:scale-105
             "
           >
             <!-- grid svg icon -->
@@ -260,6 +293,7 @@
             <span>Categories</span>
           </div>
 
+          <!-- Echo and Alexa -->
           <div
             class="
               sidebar-main-category
@@ -268,11 +302,16 @@
               flex
               font-bold
               p-2
+              duration-500
+              transform
+              hover:scale-105
             "
           >
             <span class="w-8"></span>
-            <span>Echo and Alex</span>
+            <span>Echo and Alexa</span>
           </div>
+
+          <!-- Kindle -->
           <div
             class="
               sidebar-main-category
@@ -281,11 +320,16 @@
               flex
               font-bold
               p-2
+              duration-500
+              transform
+              hover:scale-105
             "
           >
             <span class="w-8"></span>
             <span>Kindle</span>
           </div>
+
+          <!-- Books -->
           <div
             class="
               sidebar-main-category
@@ -294,11 +338,16 @@
               flex
               font-bold
               p-2
+              duration-500
+              transform
+              hover:scale-105
             "
           >
             <span class="w-8"></span>
             <span>Books</span>
           </div>
+
+          <!-- Electronics -->
           <div
             class="
               sidebar-main-category
@@ -307,11 +356,16 @@
               flex
               font-bold
               p-2
+              duration-500
+              transform
+              hover:scale-105
             "
           >
             <span class="w-8"></span>
             <span>Electronics</span>
           </div>
+
+          <!-- Home and Garden -->
           <div
             class="
               sidebar-main-category
@@ -320,11 +374,16 @@
               flex
               font-bold
               p-2
+              duration-500
+              transform
+              hover:scale-105
             "
           >
             <span class="w-8"></span>
-            <span>Home and Garden</span>
+            <span>Home & Garden</span>
           </div>
+
+          <!-- Fashion -->
           <div
             class="
               sidebar-main-category
@@ -333,11 +392,16 @@
               flex
               font-bold
               p-2
+              duration-500
+              transform
+              hover:scale-105
             "
           >
             <span class="w-8"></span>
             <span>Fashion</span>
           </div>
+
+          <!-- Sell on Amazon -->
           <div
             class="
               sidebar-main-category
@@ -348,6 +412,9 @@
               p-2
               hover:bg-gray-700
               rounded-xl
+              duration-500
+              transform
+              hover:scale-105
             "
           >
             <span class="w-8">
@@ -355,6 +422,8 @@
             </span>
             <span>Sell on Amazon</span>
           </div>
+
+          <!-- Help -->
           <div
             class="
               sidebar-main-category
@@ -365,6 +434,9 @@
               p-2
               hover:bg-gray-700
               rounded-xl
+              duration-500
+              transform
+              hover:scale-105
             "
           >
             <span class="w-8">
@@ -374,8 +446,10 @@
           </div>
         </div>
       </div>
+
       <!-- main section -->
       <div class="main-section flex-1 p-6 bg-gray-900">
+
         <!-- banner -->
         <div class="main-section-banner h-44 rounded-lg flex items-end">
           <div
@@ -390,6 +464,9 @@
               items-center
               m-4
               cursor-pointer
+              duration-500
+              transform
+              hover:scale-110
             "
           >
             <h4 class="font-bold text-blue-700">Browse Products</h4>
@@ -423,10 +500,13 @@
           </h1>
 
           <!-- Categories Icons -->
-          <div class="categories mt-5 flex">
+          <div class="categories mt-5 flex flex-wrap">
             <!-- monitor icon -->
             <div
               class="
+                duration-500
+                transform
+                hover:scale-110
                 icon-desktop
                 h-20
                 w-20
@@ -435,6 +515,8 @@
                 flex
                 justify-center
                 items-center
+                mb-6
+                mr-6
               "
             >
               <svg
@@ -455,6 +537,9 @@
             <!-- gift icon -->
             <div
               class="
+                duration-500
+                transform
+                hover:scale-110
                 icon-gift
                 h-20
                 w-20
@@ -463,7 +548,7 @@
                 flex
                 justify-center
                 items-center
-                ml-6
+                mr-6
               "
             >
               <svg
@@ -484,6 +569,9 @@
             <!-- mobile icon -->
             <div
               class="
+                duration-500
+                transform
+                hover:scale-110
                 icon-mobile
                 h-20
                 w-20
@@ -492,7 +580,7 @@
                 flex
                 justify-center
                 items-center
-                ml-6
+                mr-6
               "
             >
               <svg
@@ -513,6 +601,9 @@
             <!-- book icon -->
             <div
               class="
+                duration-500
+                transform
+                hover:scale-110
                 icon-book
                 h-20
                 w-20
@@ -521,7 +612,7 @@
                 flex
                 justify-center
                 items-center
-                ml-6
+                mr-6
               "
             >
               <svg
@@ -542,6 +633,9 @@
             <!-- Camera icon -->
             <div
               class="
+                duration-500
+                transform
+                hover:scale-110
                 icon-camera
                 h-20
                 w-20
@@ -550,7 +644,7 @@
                 flex
                 justify-center
                 items-center
-                ml-6
+                mr-6
               "
             >
               <svg
@@ -577,6 +671,9 @@
             <!-- house icon -->
             <div
               class="
+                duration-500
+                transform
+                hover:scale-110
                 icon-house
                 h-20
                 w-20
@@ -585,7 +682,7 @@
                 flex
                 justify-center
                 items-center
-                ml-6
+                mr-6
               "
             >
               <svg
@@ -606,6 +703,9 @@
             <!-- music icon -->
             <div
               class="
+                duration-500
+                transform
+                hover:scale-110
                 icon-music
                 h-20
                 w-20
@@ -614,7 +714,7 @@
                 flex
                 justify-center
                 items-center
-                ml-6
+                mr-6
               "
             >
               <svg
@@ -635,6 +735,9 @@
             <!-- lightbulb icon -->
             <div
               class="
+                duration-500
+                transform
+                hover:scale-110
                 icon-lightbulb
                 h-20
                 w-20
@@ -643,7 +746,7 @@
                 flex
                 justify-center
                 items-center
-                ml-6
+                mr-6
               "
             >
               <svg
@@ -670,7 +773,18 @@
             <!-- Product 1 -->
             <div class="main-product m-2">
               <!-- Img -->
-              <div class="product-image w-48 h-52 bg-white rounded-lg">
+              <div
+                class="
+                  product-image
+                  w-48
+                  h-52
+                  bg-white
+                  rounded-lg
+                  duration-500
+                  transform
+                  hover:scale-105
+                "
+              >
                 <img
                   class="w-full h-full object-contain p-4"
                   src="https://m.media-amazon.com/images/I/61-PblYntsL._AC_SL1500_.jpg"
@@ -687,7 +801,11 @@
               </div>
               <div class="product-make text-blue-300 font-bold">Nintendo</div>
               <div class="product-rating text-yellow-300 font-bold my-1">
-                ⭐⭐⭐⭐⭐ 4.5
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half"></i> 4.5
               </div>
               <div class="product-price font-bold text-blue-500 text-lg">
                 $299.00
@@ -696,6 +814,8 @@
               <div
                 class="
                   complete-order-button
+                  hover:bg-yellow-600
+                  text-md
                   w-32
                   h-8
                   flex
@@ -706,6 +826,9 @@
                   text-white
                   cursor-pointer
                   hover:bg-yellow-600
+                  duration-1000
+                  transform
+                  hover:scale-105
                 "
               >
                 Add to Cart
@@ -714,7 +837,19 @@
 
             <!-- Product 2 -->
             <div class="main-product m-2">
-              <div class="product-image w-48 h-52 bg-white rounded-lg">
+              <!-- image -->
+              <div
+                class="
+                  product-image
+                  w-48
+                  h-52
+                  bg-white
+                  rounded-lg
+                  duration-500
+                  transform
+                  hover:scale-105
+                "
+              >
                 <img
                   class="w-full h-full object-contain p-4"
                   src="https://m.media-amazon.com/images/I/71an9eiBxpL._AC_SL1500_.jpg"
@@ -729,7 +864,11 @@
               </div>
               <div class="product-make text-blue-300 font-bold">Apple</div>
               <div class="product-rating text-yellow-300 font-bold my-1">
-                ⭐⭐⭐⭐⭐ 5
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i> 5
               </div>
               <div class="product-price font-bold text-blue-500 text-lg">
                 $1,099.99
@@ -738,6 +877,8 @@
               <div
                 class="
                   complete-order-button
+                  hover:bg-yellow-600
+                  text-md
                   w-32
                   h-8
                   flex
@@ -748,6 +889,9 @@
                   text-white
                   cursor-pointer
                   hover:bg-yellow-600
+                  duration-1000
+                  transform
+                  hover:scale-105
                 "
               >
                 Add to Cart
@@ -756,7 +900,19 @@
 
             <!-- product 3 -->
             <div class="main-product m-2">
-              <div class="product-image w-48 h-52 bg-white rounded-lg">
+              <!-- image -->
+              <div
+                class="
+                  product-image
+                  w-48
+                  h-52
+                  bg-white
+                  rounded-lg
+                  duration-500
+                  transform
+                  hover:scale-105
+                "
+              >
                 <img
                   class="w-full h-full object-contain p-4"
                   src="https://m.media-amazon.com/images/I/71MHTD3uL4L._FMwebp__.jpg"
@@ -771,7 +927,11 @@
               </div>
               <div class="product-make text-blue-300 font-bold">Apple</div>
               <div class="product-rating text-yellow-300 font-bold my-1">
-                ⭐⭐⭐⭐⭐ 5
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i> 5
               </div>
               <div class="product-price font-bold text-blue-500 text-lg">
                 $1,399.00
@@ -780,6 +940,8 @@
               <div
                 class="
                   complete-order-button
+                  hover:bg-yellow-600
+                  text-md
                   w-32
                   h-8
                   flex
@@ -790,6 +952,9 @@
                   text-white
                   cursor-pointer
                   hover:bg-yellow-600
+                  duration-1000
+                  transform
+                  hover:scale-105
                 "
               >
                 Add to Cart
@@ -798,7 +963,19 @@
 
             <!-- product 4 -->
             <div class="main-product m-2 inline-block">
-              <div class="product-image w-48 h-52 bg-white rounded-lg">
+              <!-- image -->
+              <div
+                class="
+                  product-image
+                  w-48
+                  h-52
+                  bg-white
+                  rounded-lg
+                  duration-500
+                  transform
+                  hover:scale-105
+                "
+              >
                 <img
                   class="w-full h-full object-contain p-4"
                   src="https://m.media-amazon.com/images/I/71BQimu5ChL._AC_SL1500_.jpg"
@@ -814,7 +991,11 @@
               </div>
               <div class="product-make text-blue-300 font-bold">Alienware</div>
               <div class="product-rating text-yellow-300 font-bold my-1">
-                ⭐⭐⭐⭐⭐ 4.5
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half"></i> 4.5
               </div>
               <div class="product-price font-bold text-blue-500 text-lg">
                 $2,600.00
@@ -823,6 +1004,8 @@
               <div
                 class="
                   complete-order-button
+                  hover:bg-yellow-600
+                  text-md
                   w-32
                   h-8
                   flex
@@ -833,6 +1016,9 @@
                   text-white
                   cursor-pointer
                   hover:bg-yellow-600
+                  duration-1000
+                  transform
+                  hover:scale-105
                 "
               >
                 Add to Cart
@@ -841,7 +1027,19 @@
 
             <!-- product 5 -->
             <div class="main-product m-2">
-              <div class="product-image w-48 h-52 bg-white rounded-lg">
+              <!-- image -->
+              <div
+                class="
+                  product-image
+                  w-48
+                  h-52
+                  bg-white
+                  rounded-lg
+                  duration-500
+                  transform
+                  hover:scale-105
+                "
+              >
                 <img
                   class="w-full h-full object-contain p-4"
                   src="https://m.media-amazon.com/images/I/712derGmH8L._UY560_.jpg"
@@ -855,7 +1053,11 @@
               </div>
               <div class="product-make text-blue-300 font-bold">Tesla</div>
               <div class="product-rating text-yellow-300 font-bold my-1">
-                ⭐⭐⭐⭐⭐ 4.5
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half"></i> 4.5
               </div>
               <div class="product-price font-bold text-blue-500 text-lg">
                 $70,620.00
@@ -864,6 +1066,8 @@
               <div
                 class="
                   complete-order-button
+                  hover:bg-yellow-600
+                  text-md
                   w-32
                   h-8
                   flex
@@ -874,6 +1078,9 @@
                   text-white
                   cursor-pointer
                   hover:bg-yellow-600
+                  duration-1000
+                  transform
+                  hover:scale-105
                 "
               >
                 Add to Cart
